--- a/Friends of Mount Edgcumbe/wwwroot/index.html
+++ b/Friends of Mount Edgcumbe/wwwroot/index.html
@@ -2,9 +2,50 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <title></title>
 </head>
 <body>
-        <h1>Welcome</h1>
+    <nav class="navbar navbar-dark bg-dark">
+        <a>COMP1004</a>
+        <a href="#">Home</a>
+    </nav>
+    <div class="container row">
+        <nav class="navbar navbar-dark bg-dark">
+            <ul class="navbar-nav flex-column">
+                <li class="nav-item"><a class="nav-link active" href="#">Map</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Treasure Game</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Data</a></li>
+            </ul>
+        </nav>
+        <div id="page-content-wrapper" class="col-8 pl-0">
+            <div class="jumbotron bg-cover" style="background-image: linear-gradient(to bottom,rgba(255,255,255,0/6) 0%,rgba(255,255,255,0.9) 100%), url(/img/map-placeholder.jpg)">
+                <div class="container">
+                    <h1 class="display-4">Welcome</h1>
+                    <p class="lead font-weight-bold">Welcome to the COMP1004 sample Simgle Page Application. In this example we shall load a map, a treasure game and a data chart into this space to illustrate how JQuery will allow you to provide a rich user experience on one html page.</p>
+                </div>
+            </div>
+        </div>
+        <style>
+            .footer {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                height: 60px;
+                line-height: 60px;
+                background-color: #f5f5f5;
+            }
+        </style>
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted">Copyright University of Plymouth - for teaching purposes only
+                </span>
+            </div>
+
+        </footer>
+    </div>
+       
 </body>
 </html>
