Added an additional map page so the user can choose between the short and long routes

--- a/Friends of Mount Edgcumbe/wwwroot/index.html
+++ b/Friends of Mount Edgcumbe/wwwroot/index.html
@@ -34,9 +34,10 @@ XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V
         <nav class="navbar navbar-dark bg-dark">
             <ul class="navbar-nav flex-column">
                 <li class="nav-item"><a class="nav-link" id="index">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" id="map">Map</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" id="mapShort">Short Route</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" id="mapLong">Long Route</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" id="landmark">Landmark Information</a></li>
-                
+
             </ul>
         </nav>
         <div id="page-content-wrapper" class="col-8 pl-0">
