--- a/Friends of Mount Edgcumbe/wwwroot/mapLong.html
+++ b/Friends of Mount Edgcumbe/wwwroot/mapLong.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Friends of Mount Edgcumbe Map</title>
+    <title>Friends of Mount Edgcumbe Map (Long)</title>
 </head>
 <body>
-    <div id="map">
-        <h1>Map of the Mount Edgcumbe Country Park</h1>
+    <div id="mapLong">
+        <h1>Map of the Mount Edgcumbe Country Park (Long)</h1>
     </div>
     <div class="container-fluid row">
         <div class="card mt-3 col-md-4">
