Added About Us page and included some information

--- a/Friends of Mount Edgcumbe/wwwroot/index.html
+++ b/Friends of Mount Edgcumbe/wwwroot/index.html
@@ -26,33 +26,32 @@ XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V
     <title>Friends of Mount Edgcumbe</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <a>Friends of Mount Edgcumbe</a>
-        <a href="#">Home</a>
-    </nav>
+    
     <div class="container row">
         <nav class="navbar navbar-dark bg-dark">
             <ul class="navbar-nav flex-column">
-                <li class="nav-item"><a class="nav-link" id="index">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" id="aboutUs">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" id="mapShort">Short Route</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" id="mapLong">Long Route</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" id="landmark">Landmark Information</a></li>
 
             </ul>
         </nav>
-        <div id="page-content-wrapper" class="col-8 pl-0">
-            <div class="jumbotron bg-cover" style="background-image: linear-gradient(to bottom,
+        <div id="index">
+            <div id="page-content-wrapper" class="col-8 pl-0">
+                <div class="jumbotron bg-cover" style="background-image: linear-gradient(to bottom,
 rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.9) 100%), url('/img/mount edgcumbe picture 2.jpg')">
-                <div class="container">
-                    <h1 class="display-4">Welcome</h1>
-                    <p class="lead font-weight-bold">
-                        COMP1004 SPA 02
-                        4
-                        Welcome to the COMP1004 sample Single Page Application. In this space I will include
-                        basic information about mt edgcumbe, its history and charity work. 
-                    </p>
-                </div>
+                    <div class="container">
+                        <h1 class="display-4">Welcome</h1>
+                        <p class="lead font-weight-bold">
+                            COMP1004 SPA 02
+                            4
+                            Welcome to the COMP1004 sample Single Page Application. In this space I will include
+                            basic information about mt edgcumbe, its history and charity work.
+                        </p>
+                    </div>
 
+                </div>
             </div>
         </div>
         <style>
