Website is now complete. Final commit and push.

--- a/Friends of Mount Edgcumbe/wwwroot/index.html
+++ b/Friends of Mount Edgcumbe/wwwroot/index.html
@@ -33,7 +33,7 @@ XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V
                 <li class="nav-item"><a class="nav-link" href="#" id="aboutUs">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" id="mapShort">Short Route</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" id="mapLong">Long Route</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" id="landmark">Landmark Information</a></li>
+
 
             </ul>
         </nav>
@@ -44,10 +44,9 @@ rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.9) 100%), url('/img/mount edgcumbe p
                     <div class="container">
                         <h1 class="display-4">Welcome</h1>
                         <p class="lead font-weight-bold">
-                            COMP1004 SPA 02
-                            4
-                            Welcome to the COMP1004 sample Single Page Application. In this space I will include
-                            basic information about mt edgcumbe, its history and charity work.
+                            Welcome to the Friends of Mount Edgcumbe website. <br /><br />
+                            If you would like to learn more about the charity please visit the About Us page. 
+                            The Short Route and Long Route pages will display a guide and a map with all the landmarks our charity has helped to fund and maintain. 
                         </p>
                     </div>
 
@@ -66,7 +65,7 @@ rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.9) 100%), url('/img/mount edgcumbe p
         </style>
         <footer class="footer">
             <div class="container">
-                <span class="text-muted">Placeholder text
+                <span class="text-muted">Copyright Friends of Mount Edgcumbe Park
                 </span>
             </div>
 
